--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Emailer
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12608549
+spring.datasource.username=sql12608549
+spring.datasource.password=RKcnqTm2Dx
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
