--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12608549
-spring.datasource.username=sql12608549
-spring.datasource.password=RKcnqTm2Dx
+spring.datasource.url=jdbc:mysql://maile.cg8xszzxmyan.us-east-2.rds.amazonaws.com:3306/maile
+spring.datasource.username=maile
+spring.datasource.password=maile12345
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -14,7 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=bulkmail131@gmail.com
-spring.mail.password=abudhar.com
+#spring.mail.password=abudhar.com
+spring.mail.password=neyaxhnlhtkhehdk
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
